--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 		<link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
 
-		<title>CTVA 461 Demo</title>
+		<title>Week Two CTVA 461 Demo</title>
 	</head>
 	<body>
 		
